# moly

./: .env.docker  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  backup.sh  db.json  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  test.Dockerfile
.github/workflows/: main.yml
Moly documentation/: help.html
moly-html/: index-4.html  index-5.html
opensearch_data/nodes/0/_state/: _1j.fdm  _1j.fdt  _1j.fdx  _1j.fnm  _1j.si  _1j_1.liv  _1j_Lucene912_0.doc  _1j_Lucene912_0.psm  _1j_Lucene912_0.tim  _1j_Lucene912_0.tip  _1j_Lucene912_0.tmd  _1k.cfe  _1k.cfs  _1k.si  node-2.st  segments_1i
postgres_restore/: postmaster.pid
postgres_restore/base/1/: 2619
postgres_restore/base/13511/: pg_internal.init
postgres_restore/base/16384/: 1247  1249  1259  13366  16388  16393  16395  16398  16400  16405  16406  16409  16411  16411_fsm  16417  16418  16423  16430  16431  16436  16446  16447  16455  16457  16460  16462  16467  16468  16470  16475  16476  16479  16481  16486  16487  16492  16494  16497  16499  16502  (+133 more)
postgres_restore/global/: 1262  2671  pg_control  pg_filenode.map  pg_internal.init
postgres_restore/pg_stat_tmp/: db_0.stat  db_13511.stat  db_16384.stat  global.stat
src/: celerybeat-schedule-shm  celerybeat-schedule-wal  db.sqlite3
src/apps/auth/: forms.py  urls.py  views.py
src/apps/authentications/: apps.py  forms.py  signals.py  urls.py  utils.py  views.py
src/apps/authentications/utils/: generate.py
src/apps/baskets/: admin.py  apps.py  models.py  signals.py  urls.py  utils.py  views.py
src/apps/baskets/migrations/: 0001_initial.py  0002_alter_basketproduct_quantity.py  0003_alter_basketproduct_quantity.py  0004_alter_basketproduct_product.py  0005_alter_basketproduct_product.py  0006_alter_basket_user.py  0007_basket_contact_basket_recipient.py
src/apps/cashback/: admin.py  apps.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
src/apps/cashback/enums/: cashback_choices.py  cashback_types.py
src/apps/cashback/migrations/: 0001_initial.py  0002_remove_cashback_cashback_amount_cashback_amount.py  0003_cashbackbalance.py  0004_alter_cashbackbalance_total.py  0005_alter_cashbackbalance_options_and_more.py  0006_cashbackbalance_total_cashback_earned_and_more.py  0007_cashback_expiry_date_cashback_is_expired_and_more.py  0007_cashback_type_alter_cashback_cashback_status_and_more.py  0008_merge_20250528_1803.py  0009_alter_cashback_expiry_date.py  (+1 more)
src/apps/coupons/: admin.py  forms.py  models.py  urls.py  views.py
src/apps/favs/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
src/apps/loyalty/: admin.py  apps.py  models.py  signals.py
src/apps/notifications/: apps.py  models.py  signals.py  urls.py  views.py
src/apps/orders/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
src/apps/qa/: apps.py  forms.py  models.py  urls.py  views.py
src/apps/recommendations/: models.py  services.py
src/apps/referral/: apps.py  models.py  urls.py  views.py
src/apps/shop/: admin.py  apps.py  documents.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
src/apps/stripe_app/: apps.py  utils.py
src/apps/subscribers/: admin.py  apps.py  models.py  service.py  signals.py  tasks.py  urls.py  views.py
src/apps/users/: admin.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
src/conf/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/settings/: base.py  dev.py  prod.py  test.py
src/static/: README.md
src/static/css/: login.css  style.blue.min.css.map  style.default.min.css.map  style.gold.min.css.map  style.green.min.css.map  style.pink.min.css.map  style.scss
src/staticfiles/css/: style.red.min.css.map  style.sea.min.css.map  style.violet.min.css.map
src/templates/: base.html  test.html
src/templates/_components/: _404_page.html  _brand_area.html  _cart_row.html  _errors.html  _favicon.html  _footer.html  _header.html  _javascript.html  _js.html  _modal.html  _pagination.html  _popup.html  _style.html  _subscribe_area.html
src/templates/auth/: login.html  login_registration.html  qrcode.html  register.html  verify_2fa.html
src/templates/blog/: about-page.html  blog-detalis-page.html  blog-left-sidebar-page.html  blog-page-2.html  blog-page.html  blog-right-sidebar-page.html  contact-page.html
src/templates/index/: index.html
src/templates/notifications/: all_notifications.html  subscribed_products.html
src/templates/orders/: payment_cancel.html  payment_success.html  user_orders.html
src/templates/search/: history.html
src/templates/shop/: cart-page.html  index.html  invoice.html  search_results.html  send_mail.html
src/templates/subscribers/: coupon_email.html  template_mail.html
src/templates/users/: address-create.html  address-update.html  profile.html
src/tests/: conftest.py
src/tests/tests_apps/: conftest.py
src/utils/: db.py  get_slug.py  order_creator.py
(+338 files in other folders)
