[tool.poetry]
name = "moly-ecommerce"
version = "0.1.0"
description = ""
authors = ["sonya <sonyakarm@icloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
django-jazzmin = "^3.0.1"
pillow = "^11.1.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
stripe = "^11.6.0"
django-celery-beat = "^2.7.0"
redis = ">=4.0.0"
flake8 = "^7.2.0"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

